# os-upgrade

./: .dockerignore  .env.example  .env.ldap.example  .gitignore  ACCESS_GUIDE.md  API_STRUCTURE.md  API_TOKEN_IMPLEMENTATION.md  AUTHENTICATION.md  CUSTOM_PERMISSIONS.md  DOCKER.md  Dockerfile  LDAP_SETUP.md  NETBOX_MIGRATION_COMPLETE.md  README.Docker.md  README.md  README_LDAP.md  SSL_SETUP.md  UPGRADE_API.md  check_models.py  debug_api.py  deploy.sh  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  entrypoint.sh  error.html  generate-ssl.sh  main.py  manage.py  pyproject.toml  restart_backend.sh  test_activation_trigger.py  test_distribution_class.py  test_regional_fallback.py  test_token_api.py  verify_cancel_job.py  verify_job_fields.py
env/: app.prod.env.example  ldap.env.example  postgres.env  supported_models.env  supported_models.env.example
swim_backend/: __init__.py  api_router.py  asgi.py  authentication.py  celery.py  ldap_settings.py  ldap_signals.py  settings.py  unfold_settings.py  urls.py  wsgi.py
swim_backend/core/: activity_logger.py  activity_views.py  admin.py  apps.py  auth_views.py  dashboard_proxy.py  golden_models.py.bak  logic.py  models.py  pagination.py  parity_views.py  permissions.py  rbac_models.py  rbac_views.py  readiness.py  reports.py  scheduler.py  token_views.py  upgrade_pipeline.py  user_views.py  views.py
swim_backend/devices/: admin.py  apps.py  models.py  views.py
swim_backend/images/: admin.py  apps.py  models.py  views.py
ui/: .dockerignore  Dockerfile  nginx.conf  package-lock.json  package.json
(+274 files in other folders)
